<resources>
    <string name="app_name">SISGOURMET MOBILE</string>
    <string name="app_toolbar_name">Sisgourmet</string>
    <string name="app_action_description">Seleccion de Almuerzos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="dialog_progress_title">Trabajando</string>
    <string name="dialog_progess_message">Esperando respuesta...</string>
    <string name="description_image">descripcion</string>
    <string name="label_choose_option">Opcion</string>
    <string name="launch_label">Mi Almuerzo</string>
    <string name="tag_initial_data">Datos principales</string>
    <string name="tag_initial_data_success_message">Menus sincronizados exitosamente</string>
    <string name="tag_error_home_data">Error al obtener datos del menú principal</string>
    <string name="internal_processing_error_data">Error al procesar datos internos</string>
    <string name="empty_required_data">No se encontraron los datos requeridos</string>
    <string name="provider_vienesa">La Vienesa</string>
    <string name="provider_nha_eustaquia">Ña Eustaquia</string>
    <string name="provider_bolsi">Bolsi</string>
    <string name="provider_rating_example">4,5</string>
    <string name="total_comments">1200</string>
    <string name="label_transaction_done">Operacion Exitosa</string>
    <string name="database_error_message">Error al guardar datos</string>
    <string name="dialog_confirmation_title">Confirmación</string>
    <string name="dialog_confirmation_message">Desea confirmar esta operación?</string>
    <string name="dialog_success_title">Operación Exitosa</string>
    <string name="tag_not_internet">No posees conexión a internet favor actívala</string>
    <string name="tag_error_main_data">Error al obtener datos, favor inténtalo de nuevo</string>
    <string name="main_menu_order">Menu principal: </string>
    <string name="garnish_order">Guarnicion: </string>
    <string name="drink_order">Bebidas: </string>
    <string name="launch_package_order">Mi Almuerzo</string>
    <string name="tag_date_example">12/05/1993 21:06 hs.</string>
    <string name="login_title">Inicio de Sesion</string>
    <string name="content_description">descripcion</string>
    <string name="hint_login_username">usuario</string>
    <string name="hint_login_password">contraseña</string>
    <string name="login_button">Ingresar</string>
    <string name="title_activity_form">FormActivity</string>
    <string name="register_user_title">Registrar Usuario</string>
    <string name="error_user_not_exist">Verifique, no existe usuario con los datos ingresados</string>
    <string name="error_save_user_data">Error al guardar los datos del usuario</string>
    <string name="label_cancel">Cancelar</string>
    <string name="label_accept">Aceptar</string>
    <string name="label_session">Sesion</string>
    <string name="label_send">Enviar</string>
    <string name="label_back">Atrás</string>
    <string name="label_view">VER</string>
    <string name="label_close">Cerrar</string>
    <string name="label_retry">Reintentar</string>
    <string name="label_close_session">Cerrar sesion</string>
    <string name="confirm_logout_session_title">Cerrar Sesion</string>
    <string name="confirm_logout_message">¿ Desea cerrar la sesion actual ?.</string>
    <string name="label_next">Siguiente</string>
    <string name="tag_view_password">Ver Contraseña</string>
    <string name="tag_send_qualification">Enviar Calificación</string>
    <string name="label_summary">Resúmen</string>
    <string name="comments_label">Comentarios</string>
    <string name="error_save_transaction">Error a guardar la operación</string>
    <string name="dialog_error_title">Error en la operación</string>
    <string name="label_send_queue">Enviar luego</string>
    <string name="error_parsing_json">Error al interpretar la respuesta</string>
    <string name="error_processing_image">Error al procesar imagen</string>
    <string name="login_form_activity_title">Registro de usuarios</string>
    <string name="hint_identify_card">Ingrese su numero de CI.</string>
    <string name="error_username_name_register_required">Favor, ingrese un usuario</string>
    <string name="error_password_register_required">Favor, ingrese una contraseña</string>
    <string name="error_password_register_identifyCard">Favor, ingrese un numero de CI</string>
    <string name="error_user_alredy_exist">Ya existe un usuario con los datos ingresados</string>
    <string name="confirm_create_user">Desea crear un usuario con los datos ingresados ?.</string>
    <string name="error_not_equal_pass">Las contraseñas no coinciden</string>
    <string name="menu_selected_principal_menu">Menú principal</string>
    <string name="menu_selected_principal_menu_description">Seleccion de almuerzos</string>
    <string name="title_activity_principal_selected">Seleccion de Menu</string>
    <string name="provider_list_menu">Proveedores</string>
    <string name="provider_list_menu_description">Lista de Proveedores</string>
    <string name="reset_password_menu">Seguridad</string>
    <string name="reset_password_menu_description">Cambiar Contraseña</string>
    <string name="qualification_menu">Calificacion</string>
    <string name="qualification_menu_decription">Calificacion del Servicio</string>
    <string name="tab_menu">Menú</string>
    <string name="tab_orders">Pedidos</string>
    <string name="tab_my_favorites">Favoritos</string>
    <string name="tab_comments">Comentarios</string>
    <string name="tab_my_account">Mi Cuenta</string>
    <string name="title_activity_provider">Proveedores</string>
    <string name="title_activity_qualification">Calificación</string>
    <string name="title_activity_reset_pass">Cambio de Contraseña</string>
    <string name="hint_login_new_password">Nueva contraseña</string>
    <string name="hint_login_confirm_password">Confirmar contraseña</string>
    <string name="check_button">Verificar</string>
    <string name="error_username_name_reset_required">Favor,ingrese un usuario</string>
    <string name="error_password_reset_required">Favor, ingrese una contraseña</string>
    <string name="error_password_reset_identifyCard">Favor, ingrese numero de CI</string>
    <string name="error_new_password_reset_required">Favor, ingrese su nueva contraseña</string>
    <string name="error_password_confirm_required">Favor, confirme nueva contraseña</string>
    <string name="qualification_title">Calificaciones</string>
    <string name="qualification_dialog_message">Calificacion asignada</string>
    <string name="quialification_text">Evalua nuestro servicio</string>
    <string name="qualification_result1">No me gusto en absoluto</string>
    <string name="qualification_result2">No me gusto</string>
    <string name="qualification_result3">Esta bien</string>
    <string name="qualification_result4">Me gusto</string>
    <string name="qualification_result5">Me encanto</string>
    <string name="hint_comment">Ingrese su comentario</string>
    <string name="error_no_provider_data">No se encontraron datos de proveedores</string>
    <string name="error_empty_qualification">Debes asignar una calificacion</string>
    <string name="qualification_message_back_press">Desea cancelar su calificacion?.</string>
    <string name="item_order_type">Tipo</string>
    <string name="item_order_date">Fecha</string>
    <string name="item_order_amount">Monto</string>
    <string name="item_order_status">Estado</string>
    <string name="item_rating_value">Valor</string>
    <string name="item_main_menu">Menú pincipal:</string>
    <string name="item_garnish">Guarnición:</string>
    <string name="item_qualification">Calificación:</string>
    <string name="date_menu">Fecha: </string>
    <string name="provider_name">Proveedor: </string>
    <string name="item_price_unit">Precio:</string>
    <string name="item_drinks_description">nombre</string>
    <string name="label_drink">Bebidas</string>
    <string name="label_summary_lunch">Resumen</string>
    <string name="label_summary_lunch_description">Resumen de almuerzo</string>
    <string name="label_summary_main_menu">Menú Principal: </string>
    <string name="label_summary_garnish">Guarnicion</string>
    <string name="label_summary_drink">Bebidas</string>
    <string name="label_summary_total_price">Total precio</string>
    <string name="title_activity_provider_selected">ProviderSelectedActivity</string>
    <string name="provider_selected">Proveedores</string>
    <string name="title_activity_selected_lunch">SelectedLunchActivity</string>
    <string name="lunch_selected">Selección de Almuerzos</string>
    <string name="error_get_provider_by_recyclerview">No se pudo optener el proveedor</string>
    <string name="label_selected_menu">Menú  Seleccionado</string>
    <string name="label_details_selected_menu">Detalles</string>
    <string name="label_provider_menu">Proveedor</string>
    <string name="label_main_menu_selected">Menú Principal</string>
    <string name="label_garnish_selected">Guarnición</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="title_activity_selected_lunch_manager">SelectedLunchManagerActivity</string>
    <string name="title_activity_lunch_manager">LunchManagerActivity</string>
    <string name="error_get_lunch_object">Error al obtener menu seleccionado</string>
    <string name="label_drink_selected">Seleccionar Bebida</string>
    <string name="qualification_menu_privider_value">valor</string>
    <string name="not_drink">Sin bebida</string>
    <string name="my_lunch">Mi almuerzo</string>
    <string name="order_send_succes_message">Pedido de almuerzo enviado exitosamente</string>
    <string name="error_not_data_drinks">Debes descargar las bebidas</string>
    <string name="qualification_activity_title">Calificaciones</string>
    <string name="error_comment_empty">Debes ingresar un comentario</string>
    <string name="qualification_send_succes_message">Calificación enviada exitosamente</string>
    <string name="unexpected_error_comment">Error inesperado al procesar comentarios</string>
    <string name="label_comment">Comentarios</string>
    <string name="title_activity_comment_view">CommentViewActivity</string>
    <string name="item_username_comment">Usuario</string>
    <string name="item_comment">Comentario: </string>
    <string name="item_selected_menu">Almuerzo</string>
    <string name="error_not_qualification">Debes asignar una calificación</string>
    <string name="error_provider_id_is_empty">No se encontro el identificador del proveedor</string>
    <string name="error_main_menu_is_empty">Error, no se encontró menú principal</string>
    <string name="error_garnish_is_empty">No se encontro guarnición</string>
    <string name="tag_qualification_menu">Califica tu menú</string>
    <string name="error_form_comments_complete_required">Debes calificar el menu para enviarlo</string>
    <string name="error_save_qualification">Error al guardar calificacion</string>
    <string name="tag_principal">Principal: </string>
    <string name="order_dialog_title">Mi Pedido</string>
    <string name="title_activity_sync">Sync</string>
    <string name="volley_no_connection_error">No posee conexion a internet, favor verifiquela.</string>
    <string name="volley_network_error">Intento de conexion con el servidor fallida, favor intente de nuevo.</string>
    <string name="volley_server_error">Error de servidor, favor intente de nuevo.</string>
    <string name="volley_authentication_error">Error de Autenticacion.</string>
    <string name="volley_auth_error">Error al autenticarse en el servidor.</string>
    <string name="volley_parse_error">Error al capturar la respuesta.</string>
    <string name="tag_my_acount">Mi Cuenta</string>
</resources>