<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_prividers"
            android:icon="@mipmap/ic_local_shipping_black_36dp"
            android:title="@string/provider_list_menu" />

        <item
            android:id="@+id/nav_my_account"
            android:icon="@mipmap/ic_settings_black_36dp"
            android:title="@string/tag_my_acount" />
    </group>

    <item android:title="@string/label_comment">
        <menu>
            <item
                android:id="@+id/comment_id"
                android:icon="@mipmap/ic_create_black_36dp"
                android:title="@string/label_comment" />
        </menu>
    </item>

    <item android:title="@string/label_session">
        <menu>
            <item
                android:id="@+id/nav_sesion"
                android:icon="@mipmap/ic_power_settings_new_black_36dp"
                android:title="@string/label_close_session" />
        </menu>
    </item>

</menu>
