<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/container_all_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_margin="@dimen/activity_horizontal_margin"
        tools:ignore="UselessParent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0.9">
            <ImageView
                android:contentDescription="@string/description_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_restaurant_menu_black_36dp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:orientation="vertical">
            <TextView
                android:id="@+id/main_menu_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:text="@string/item_main_menu"/>

            <TextView
                android:id="@+id/garnish_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_garnish"/>

            <TextView
                android:id="@+id/price_unit_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_price_unit"/>

            <android.support.v7.widget.AppCompatRatingBar
                android:id="@+id/privider_raiting_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/ratingBarStyleIndicator"
                android:clickable="false" />

            <TextView
                android:id="@+id/raiting_description_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:text="@string/item_qualification"/>

        </LinearLayout>
    </LinearLayout>



</RelativeLayout>