<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_padding"
        app:cardCornerRadius="@dimen/default_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/order_image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:contentDescription="@string/description_image"
                android:src="@mipmap/login" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_padding"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/order_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/robot_regular"
                    android:text="@string/main_menu_order"
                    android:textSize="12sp"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/order_garnish"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/robot_regular"
                    android:text="@string/garnish_order"
                    android:textSize="12sp"
                    android:textColor="@color/colorGraphite" />

                <TextView
                    android:id="@+id/order_drink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/robot_regular"
                    android:text="@string/drink_order"
                    android:textSize="12sp"
                    android:textColor="@color/colorGraphite" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/order_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:fontFamily="@font/robot_regular"
                        android:text="@string/item_price_unit"
                        android:textColor="@color/colorGraphite"
                        android:textSize="12sp" />


                    <TextView
                        android:id="@+id/order_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.7"
                        android:fontFamily="@font/robot_regular"
                        android:text="@string/date_menu"
                        android:textColor="@color/colorGraphite"
                        android:textSize="12sp" />


                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>