<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/order_type_imageView"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/content_description" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <ImageButton
                        android:id="@+id/star_comment_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/description_image"
                        android:src="@mipmap/ic_star_black_24dp" />

                    <TextView
                        android:id="@+id/item_rating_value_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:text="@string/item_rating_value"
                        android:textAppearance="@android:style/TextAppearance.Medium"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/item_order_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_order_type"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textColor="@color/primary_text"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/item_order_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_order_amount"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/item_order_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_order_date"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/id_order_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/item_order_status"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.1">

                <ImageView
                    android:id="@+id/status_image_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_description"
                    android:src="@mipmap/ic_thumb_up_black_24dp" />
            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>


</RelativeLayout>