<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent"
        android:id="@+id/linearLayout2">

        <TextView
            android:id="@+id/geoTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimary"
            android:drawableLeft="@mipmap/ic_featured_play_list_white_36dp"
            android:drawableStart="@mipmap/ic_featured_play_list_white_36dp"
            android:gravity="center"
            android:padding="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:text="@string/label_summary_lunch"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorIcons"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:text="@string/label_summary_lunch_description"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/summary_main_menu_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:gravity="start"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:text="@string/label_summary_main_menu"
                android:textColor="@color/primary_text"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/summary_garnish_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:gravity="start"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:text="@string/label_summary_garnish"
                android:textColor="@color/primary_text"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/summary_drink_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:gravity="start"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:text="@string/label_summary_drink"
                android:textColor="@color/primary_text"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView_summary_drinks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/summary_price_textView">

    </android.support.v7.widget.RecyclerView>

    <TextView
        android:id="@+id/summary_price_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:text="@string/label_summary_total_price"
        android:textColor="@color/primary_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_above="@+id/container_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />




    <LinearLayout
        android:id="@+id/container_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/action_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/accent"
            android:text="@string/label_back"
            android:textColor="@color/colorIcons"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/action_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/accent"
            android:text="@string/label_send"
            android:textColor="@color/colorIcons"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>